--- a/www/templates/session.html
+++ b/www/templates/session.html
@@ -3,6 +3,21 @@
 		<div class="list card" ng-repeat="(key, user) in session.users">
 			<div class="item item-avatar">
 				<img src="img/noimage.png">
+				<div class="list">
+				  <label class="item item-input item-select">
+				    <div class="input-label">
+						{{user.name}}
+				    </div>
+				    <select ng-model="user.status" value="{{value.opt}}" >
+				      <option ng-repeat="(key, value) in statusOpt">{{value.opt}}</option>
+				    </select>
+				  </label>
+				</div>
+			</div>
+
+			<!--
+			<div class="item item-avatar">
+				<img src="img/noimage.png">
 				<h2>{{user.name}}</h2>
 				<p>{{user.status}}</p>
 
@@ -13,6 +28,7 @@
 					</label>
 				</div>
 			</div>
+			-->
 		</div>
 		<button class="button button-block button-positive post-button" ng-click="Post()">Post</button>
 	</ion-content>
