preparando usuários para serem enviados com a sessão

--- a/www/templates/session.html
+++ b/www/templates/session.html
@@ -15,7 +15,8 @@
 			    <ion-content>
 			        <div class="list">
 					  <label class="item item-radio" ng-repeat="(key, status) in session.statuses">
-					    <input type="radio" name="group" value="status.description" ng-click="changeStatus(status.description)">
+					    <input type="radio" name="group" value="status.description" 
+					           ng-click="changeStatus(status)">
 					    <div class="item-content">{{status.description}}</div>
 					    <i class="radio-icon ion-checkmark"></i>
 					  </label>
@@ -27,6 +28,8 @@
 		</div>
 		
 
-		<button class="button button-block button-positive post-button" ng-click="Post()">Post</button>
+		<button class="button button-block button-positive post-button" ng-click="takeAttendance(session)">
+		    Enviar sessão
+		</button>
 	</ion-content>
 </ion-view>
