--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,27 +13,32 @@
 	margin-left: 1em;
 }
 
-.checkbox .Presente:checked:before, .Presente input:checked + .Presente-icon:before {
-	border-color: rgb(57, 202, 57);
-	background: rgb(49, 218, 49);
-}
-
-
-.checkbox .Ausente:checked:before, .Ausente input:checked + .Ausente-icon:before {
-	background: #EC2C42;
-  	border-color: #B53838;
-}
-
-.checkbox .Atrasado:checked:before, .Atrasado input:checked + .Atrasado-icon:before {
-	background: #F3F766;
- 	border-color: #DBD919;
-}
-
 .session .presence-opt {
 	float: right;
 	margin-top: -3em;
 }
 
 .session .post-button {
-	margin-top: 10em; importat!;
+	margin-top: 10em;
+}
+
+ion-popover-view.fit {
+	height: auto !important;
+}
+
+ion-popover-view.fit ion-content {
+	position: relative !important;
+}
+
+.platform-android ion-popover-view.fit {
+	margin-top: 10px !important;
+}
+
+ion-popover-view.fit .button.button-full {
+	margin-top: 0; !important;
+	margin-bottom: 0; !important;
+}
+
+.logout-button {
+	background: rgb(151, 187, 244);
 }
