--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,10 +6,13 @@
 
       <div class="list list-inset">
           <label class="item item-input">
-              <input type="text" placeholder="Username" ng-model="data.username">
+              <input type="text" placeholder="Site url" ng-model="data.url">
           </label>
           <label class="item item-input">
-              <input type="password" placeholder="Password" ng-model="data.password">
+              <input type="text" placeholder="idUFSC, Matrícula, E-mail, CPF, ou Passaporte" ng-model="data.username">
+          </label>
+          <label class="item item-input">
+              <input type="password" placeholder="Senha" ng-model="data.password">
           </label>
       </div>
       <button class="button button-block button-positive" ng-click="login()">Login</button>
