--- a/www/templates/session.html
+++ b/www/templates/session.html
@@ -4,7 +4,7 @@
 	</ion-nav-buttons>
 
 	<ion-content class="padding">
-		<div class="list card" ng-repeat="(key, user) in session.users" ng-click="openModal(user)">
+		<div class="list card student_card" ng-repeat="(key, user) in session.users" ng-click="openModal(user)">
 			<div class="item item-avatar">
 				<img src="img/noimage.png">
 				<h2>{{user.firstname + " " + user.lastname}}</h2>
