adicionando função que busca o token de um dado usuário

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,7 +6,7 @@
 
       <div class="list list-inset">
           <label class="item item-input">
-              <input type="url" placeholder="Site url" ng-model="data.url">
+              <input type="text" placeholder="Site url" ng-model="data.url">
           </label>
           <label class="item item-input">
               <input type="text" placeholder="idUFSC, Matrícula, E-mail, CPF, ou Passaporte" ng-model="data.username">
