--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,15 +6,15 @@
 
       <div class="list list-inset">
           <label class="item item-input">
-              <input type="text" placeholder="Site url" ng-model="data.url">
+              <input type="url" placeholder="Site url" ng-model="data.url">
           </label>
-          <label class="item item-input">
-              <input type="text" placeholder="idUFSC, Matrícula, E-mail, CPF, ou Passaporte" ng-model="data.username">
+          <label class="item item-input {{errors.usernameInvalid}}">
+              <input type="text" placeholder="CPF" ng-model="data.username"}>
           </label>
-          <label class="item item-input">
-              <input type="password" placeholder="Senha" ng-model="data.password">
+          <label class="item item-input {{errors.passwordInvalid}}">
+              <input type="password" placeholder="Senha" ng-model="data.password" required>
           </label>
       </div>
-      <button class="button button-block button-positive" ng-click="login()">Login</button>
+      <button type="submit" class="button button-block button-positive" ng-click="login()">Login</button>
   </ion-content>
 </ion-view>
