mudanças de estruturas e iniciando testes com autenticação centralizada

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,12 +6,9 @@
 
       <div class="list list-inset">
           <label class="item item-input">
-              <input type="url" placeholder="Site url" ng-model="data.url">
-          </label>
-          <label class="item item-input {{errors.usernameInvalid}}">
               <input type="text" placeholder="CPF" ng-model="data.username"}>
           </label>
-          <label class="item item-input {{errors.passwordInvalid}}">
+          <label class="item item-input">
               <input type="password" placeholder="Senha" ng-model="data.password" required>
           </label>
       </div>
