--- a/www/templates/session_not_found.html
+++ b/www/templates/session_not_found.html
@@ -3,9 +3,9 @@
 		<button class="button icon ion-arrow-left-c" ng-click="goBack()"></button>
 	</ion-nav-buttons>
 	<ion-content class="padding">
-		<div class="item-icon-bottom">
-			 <i class="icon ion-sad" style="color: #B4B7B9; margin-top: 100px; position:absolute; left:42%; font-size:300px"> </i>
-			<p style="color: #B4B7B9; margin-top: 14em; position:absolute; left:45%; font-size:30px">Sessão vazia</p>
+		<div class="not-found">
+			<img class="not-found-image" src="img/empty.png"> </img>
+			<p class="not-found-text">Sessão vazia</p>
 		</div>
 	</ion-content>
 </ion-view>
