--- a/www/templates/session.html
+++ b/www/templates/session.html
@@ -1,4 +1,4 @@
-<ion-view view-title="" class="session" name="session-view">
+<ion-view cache-view="false" view-title="" class="session" name="session-view">
 	<ion-nav-buttons side="right">
 		<button class="button icon ion-gear-a" ng-click="openPopover($event)"></button>
 	</ion-nav-buttons>
@@ -24,7 +24,7 @@
 		<script id="status-modal.html" type="text/ng-template">
 		  <ion-modal-view>
 		    <ion-header-bar>
-		      <h1 class="title">Defina o status do aluno</h1>
+		      <h1 class="title">Selecione o status do aluno na sessão</h1>
 		    </ion-header-bar>
 		    <ion-content>
 		        <div class="list">
